# bassicraft2

./: Cargo.toml  build.rs  index.html
src/: block.rs  camera.rs  chunk.rs  gui.rs  lib.rs  main.rs  model.rs  player.rs  resources.rs  shader.wgsl  texture.rs  texture_atlas.rs  world.rs
