[package]
name = "bassicraft2"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "27.0.0"
pollster = "0.3"
bytemuck = { version = "1.24", features = [ "derive" ] }
cgmath = "0.18"
tobj = { version = "3.2", default-features = false, features = ["async"]}
noise = "0.9"
instant = "0.1"
egui = { version = "0.33", default-features = false, features = ["default_fonts"] }
eframe = { version = "0.33", features = ["wgpu"], default-features = false }
egui-wgpu = "0.33"
egui-winit = { version = "0.33", default-features = false }
egui_extras = { version = "0.33.3", features = ["all_loaders", "image"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "27.0.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
reqwest = { version = "0.11" }
instant = { version = "0.1", features = [ "wasm-bindgen" ] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
# wasm-opt = ["-O", "--enable-bulk-memory", "--enable-mutable-globals"]